feat: changed content_framework to dict only (for precision when generating sections)

--- a/notebooks/testing_notebook.ipynb
+++ b/notebooks/testing_notebook.ipynb
@@ -458,10 +458,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Dish Appeal', 'Cultural Savvy', 'Upselling Grace', 'Wine Wisdom', 'Service Efficiency'])"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from inputs.frameworks.content_framework import content_framework\n",
+    "content_framework.keys()"
+   ]
   },
   {
    "cell_type": "code",
