feat: updated main.py with new functionnalities and content framework setup

--- a/notebooks/testing_notebook.ipynb
+++ b/notebooks/testing_notebook.ipynb
@@ -34,6 +34,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function dotenv.main.load_dotenv(dotenv_path: Union[str, ForwardRef('os.PathLike[str]'), NoneType] = None, stream: Optional[IO[str]] = None, verbose: bool = False, override: bool = False, interpolate: bool = True, encoding: Optional[str] = 'utf-8') -> bool>"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
