feat: added questions for few shot prompting

--- a/notebooks/testing_notebook.ipynb
+++ b/notebooks/testing_notebook.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -35,22 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function dotenv.main.load_dotenv(dotenv_path: Union[str, ForwardRef('os.PathLike[str]'), NoneType] = None, stream: Optional[IO[str]] = None, verbose: bool = False, override: bool = False, interpolate: bool = True, encoding: Optional[str] = 'utf-8') -> bool>"
+       "True"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "load_dotenv"
+    "load_dotenv()"
    ]
   },
   {
@@ -109,6 +100,58 @@
    "metadata": {},
    "source": [
     "# Testing few shot prompting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from inputs.frameworks.content_framework_Q_A import content_framework\n",
+    "\n",
+    "len(content_framework)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Dish Descriptions', 'Ingredient Stories', 'Dietary accomodations', 'Special Dishes', 'Menu Customization', 'Food Preparation Terms', 'Flavors and textures', 'Serving Suggestions & Combinations', 'Allergy awareness', 'Menu Changes', 'Dish simplification'])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content_framework[\"Menu Knowledge Mastery\"][\"quizzes\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generated_content={}\n",
+    "generated_content[\"description dish\"] = []"
    ]
   },
   {
